--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-echarts": "^4.0.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1"
